# pytest_nerv

./: .gitignore  AGENTS.md  README.md  pyproject.toml
src/pytest_nerv/: __init__.py  plugin.py
src/pytest_nerv.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_plugin_basics.py
